update to elm 0.19

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 </body>
 
 <script type="text/javascript">
-  var app = Elm.ScheduleFromVideos.fullscreen()
+  var app = Elm.ScheduleFromVideos.init()
 </script>
 
 </html>
