--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 <script type="text/javascript">
   var app = Elm.ScheduleFromVideos.init()
 </script>
+<script defer src="svgxuse.js"></script>
 
 </html>
 
