--- a/public/panel.html
+++ b/public/panel.html
@@ -14,6 +14,7 @@
   <!--script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script-->
   <script type="text/javascript" src="schedule-from-videos.js"></script>
   <script type="text/javascript" src="bootstrap.js"></script>
+  <script defer src="svgxuse.js"></script>
 </body>
 
 </html>
