port workaround for text left alignment

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,15 @@
 
 <script type="text/javascript">
   var app = Elm.ScheduleFromVideos.init()
+
+  let canvas = document.createElement("canvas");
+  let context = canvas.getContext("2d");
+
+  app.ports.getTextWidth.subscribe(function(params) {
+    context.font = params.font;
+    let metrics = context.measureText(params.text);
+    app.ports.textSize.send({text: params.text, width: metrics.width})
+  })
 </script>
 <script defer src="svgxuse.js"></script>
 
