--- a/public/panel.html
+++ b/public/panel.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-  <script src="https://localhost.rig.twitch.tv:3000/twitch-ext.js"></script>
-  <!--script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script-->
+  <!--script src="https://localhost.rig.twitch.tv:3000/twitch-ext.js"></script-->
+  <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
 
   <script type="text/javascript" src="schedule-from-videos.js"></script>
   <script type="text/javascript" src="bootstrap.js"></script>
