extension review: remove twitch icon from social link

--- a/public/panel.html
+++ b/public/panel.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Twitch Schedule from Videos</title>
+  <title>Schedule from Videos</title>
 </head>
 
 <body>
